Added user route (very insecure, no OAuth)
